# lecture-computational-physics-machine-learning

./: .gitignore  README.md
exercises/: .gitignore  CMakeLists.txt
exercises/01/: .gitignore  CMakeLists.txt  README.md  main.cc  plot.cc  sinc.h  stencil_error.cc
exercises/01/QCustomPlot/: .gitignore
exercises/02/: .gitignore  CMakeLists.txt  README.md  data_in_model_class.cc  data_not_in_model_class.cc  generator.h  plot.h  polynomial.h  polynomial_regression.h
exercises/02-polynomial-regression/: CMakeLists.txt  main.cc
exercises/04/: CMakeLists.txt  README.md  README.tex  main.cc
exercises/05/: .gitignore  CMakeLists.txt  README.md  activation.cc  and.cc  network_and_learn_rate_sigtanh.cc  network_and_sigmoid.cc  network_and_sigtanh.cc  network_and_xor_sigtanh.cc  network_nand_sigtanh.cc  network_or_sigtanh.cc  network_xor_sigtanh.cc  neural_network.cc  neural_network.h  neural_network_and.cc  plot.cc  plot.h  utils.h
exercises/05/results/: and_learn_rate_sigtanh.txt  and_sigmoid.txt  and_sigtanh.txt  and_xor_sigtanh.txt  nand_sigtanh.txt  or_sigtanh.txt  xor_sigtanh.txt
exercises/05/tests/: CMakeLists.txt  neural_network.cc
exercises/QCustomPlot/: CMakeLists.txt
